BE and FE modifications in preparation for implementation of a kanban board